# ddp-actuator-solver

./: .gitignore  CMakeLists.txt
cpp/: CMakeLists.txt  resultsMPC1.csv
cpp/iLQRSolver/: iLQRSolver.pro
cpp/iLQRSolver-build-desktop-Qt_4_8_1_dans_le_PATH__Syst_me__Debug/: Makefile  iLQRSolver
cpp/iLQRSolver-build-desktop-Qt_4_8_1_dans_le_PATH__Syst_me__Release/: Makefile  iLQRSolver
cpp/include/: CMakeLists.txt  ceaactuator.h  config.h  costcea.h  costfunction.h  costfunctionpneumaticarmelbow.h  costfunctionromeoactuator.h  dynamicmodel.h  ilqrsolver.h  pneumaticarm2nonlinearmodel.h  pneumaticarm2ordermodel.h  pneumaticarm_2linkmodel.hh  pneumaticarm_model.h  pneumaticarmelbowlinear.h  pneumaticarmelbowpiecelinear.h  pneumaticarmnonlinearmodel.h  romeoactuatorpos.h  romeolinearactuator.h  romeosimpleactuator.h  romeotorqueactuator.h
cpp/src/: CMakeLists.txt  ceaactuator.cpp  costcea.cpp  costfunction.cpp  costfunctionpneumaticarmelbow.cpp  costfunctionromeoactuator.cpp  costtemp.cpp  dctemp.cpp  dynamicmodel.cpp  ilqrsolver.cpp  main.cpp  pneumaticarm2nonlinearmodel.cpp  pneumaticarm_2linkmodel.cpp  pneumaticarm_model.cpp  pneumaticarmelbow2ndordermodel.cpp  pneumaticarmelbowlinear.cpp  pneumaticarmelbowpiecelinear.cpp  pneumaticarmnonlinearmodel.cpp  resultsMPC.csv  resultsMPC1.csv  resultsModel.csv  romeoactuatorpos.cpp  romeolinearactuator.cpp  romeosimpleactuator.cpp  romeotorqueactuator.cpp
cpp/src/matlab/: ilqr.m  ilqr_linearization.m  ilqr_openloop.m  launch.m
cpp/test/: BenchCom.h  benchControl.cpp  main.cpp  mainCEA.cpp  mainMPC.cpp  testModel.cpp
doc/: .gitignore
examples/: CMakeLists.txt
examples/inverse_pendulum/: CMakeLists.txt  costIP.cpp  costIP.hh  mainIP.cpp  modelIP.cpp  modelIP.hh
examples/linear/: CMakeLists.txt  costLinear.cpp  costLinear.hh  mainLinear.cpp  modelLinear.cpp  modelLinear.hh
examples/romeo_actuator/: CMakeLists.txt  benchControl.cpp  costfunctionromeoactuator.cpp  costfunctionromeoactuator.hh  main.cpp  mainMPC.cpp  mainTorque.cpp  romeosimpleactuator.cpp  romeosimpleactuator.hh  romeotorqueactuator.cpp  romeotorqueactuator.hh  testModel.cpp
examples/temperature_control/: CMakeLists.txt  costtemp.cpp  costtemp.hh  dctemp.cpp  dctemp.hh  mainTemp.cpp  testTempModel.cpp
include/ddp-actuator-solver/: config.h  costfunction.hh  costfunctionromeoactuator.h  costtemp.h  dctemp.h  ddpsolver.hh  dynamicmodel.hh  ilqrsolver.h  romeosimpleactuator.h
matlab/: demo_pneumatic2link_delP_MPC3.m  estimatnonlinearstate.m  ilqr_cost.m  ilqr_iteration.m  ilqr_linearization.m  ilqr_system.m  integration_test_pneumatic.m  integration_test_pneumatic.m~  jointdynamics4state.m  jointdynamics4stateflorent.m  jointnonlineardynamics.m  jointpressuredynamics6state.m  launch.m  launch.m~  launchilqrtraj.m  modelcomparewithrobot.slx  pneumaticmodelwithpressuredynamic.slx  preview_controlpneumatic.m  xdotpneu.m
matlab/iLQG/: 2linkmaipramp1.fig  2linkmaniprammp2.fig  2linkmanipramp3.fig  2linkmanipsinetrack1.fig  2linkmanipsintrack2.fig  2linkmanipwithpvelfeedf.fig  2linkmanipwithvelfeed2.fig  createplot.m  demo_car.m  demo_linear.m  demo_pneumatic.m  demo_pneumatic.m~  demo_pneumatic2link_P1P2_DDP.m  demo_pneumatic2link_delPPm_DDP.m  demo_pneumatic2link_delP_DDP.m  demo_pneumatic2link_delP_MPC.m  demo_pneumatic4st.m  demo_pneumatic6st.m  demo_pneumatic_delP.m  demo_pneumatic_delP_MPC.m  extractdatfromfig.m  gainmatrix2.fig  gainx1.fig  iLQG.m  license.txt  pneumatics2link_dynamics.m  presinpvelfeed.fig  ramptrackMPC.fig  ramptrackMPCedited.fig  untitled.fig  weightliftDDP.fig  weightlifting.fig  weightliftingDDP.fig  weightliftjoint1_nonlin.fig  wightliftjoint2_5bar.fig  wnvstheta.fig  wnvstheta.m  wnvsthetajoint2.fig
matlab/iLQG/dataplot/: exp1_Pmvary.fig  exp1_Pmvary.mat  exp1_massvary.fig  exp1_massvary.mat  exp1_opt.fig  exp1_opt.mat  exp1_optwithPI.fig  exp1_optwithpres.fig  plotgraphs_Pmvary.m  plotgraphs_optimal.m
private_cmake/: FindqpOASES.cmake
python/: DDPSolver.py  costFunction.py  costFunctionBlank.py  costFunctionImproved.py  dynamicModel.py  dynamicModelBlank.py  dynamicModelImproved.py  iLQRSolver.py  iLQRSolverImproved.py  test.py  testCostDeriv.py  testMPC.py  testMPCTime.py  testModel.py  testModelDeriv.py  testTime.py  testiLQR.py  testiLQRImproved.py  testiLQRLinear.py  testiLQRRandom.py  testiLQRTime.py  tools.py
python/test/: costFunction.py  dynamicModel.py  testDDP.py  testDDPLinear.py
python/testMatlab/: QP.m~  QP10.m~
qtTmp/: config.h  costfunction.h  costfunctionromeoactuator.cpp  costfunctionromeoactuator.h  dynamicmodel.h  ilqrsolver.cpp  ilqrsolver.h  main.cpp  mainMPC.cpp  qtTmp.pro  romeolinearactuator.cpp  romeolinearactuator.h  romeosimpleactuator.cpp  romeosimpleactuator.h
readme/: readme.tex
src/: CMakeLists.txt  costfunctionromeoactuator.cpp  costtemp.cpp  dctemp.cpp  romeosimpleactuator.cpp  romeotorqueactuator.cpp
test/: BenchCom.cpp  CMakeLists.txt  benchControl.cpp  main.cpp  mainMPC.cpp  mainTemp.cpp  mainTorque.cpp  testModel.cpp
tools/: trace.py  traceBench.py  traceMPC.py  traceModel.py  tracePendulum.py  traceTest.py
