#SET(LIBRARY_NAME ${PROJECT_NAME})
# SET(${LIBRARY_NAME}_SOURCES
#    dynamicmodel.cpp
#    costfunction.cpp
#    romeolinearactuator.cpp
#    costfunctionromeoactuator.cpp
#    romeosimpleactuator.cpp
#)

#ADD_LIBRARY(${LIBRARY_NAME}
#    SHARED
#    ${${LIBRARY_NAME}_SOURCES}
#    )

#INSTALL(TARGETS ${LIBRARY_NAME} DESTINATION lib)
